# tradingapp

./: .eslintrc.cjs  .eslintrc.json  00-README.md  AUGMENT-FIX-ALL.txt  BUILD.md  Dockerfile  RUNBOOK.md  batch0.dev-env.json  batch1.architect.contracts.json  batch2.data.layer.json  batch2.engine.math.json  batch2.signals.registry.json  batch3.strategies.complex.json  batch3.strategies.credit.json  batch3.strategies.debit.json  batch3.strategies.pmcc.json  batch3.strategies.wheel.json  batch4.backtest.runner.json  batch5.gui.wiring.json  batch6.gui.indicator-lab.json  batch7.release.json  custom_types.py  index.html  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pytest.ini  router-solution.html  run_tests.py  tailwind.config.cjs  tailwind.config.js  test_engine_basic.py  trading-dashboard.html  tsconfig.json  verify_result_summary.py  vite.config.ts
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: desktop.yml
adaptive/: __init__.py  manager.py  types.py
adaptive/optimizer/: __init__.py  bayesian_optimizer.py
adaptive/pattern/: __init__.py  autoencoder.py
adaptive/rl/: __init__.py  agent.py
app/components/: PayoffChart.props.ts
app/state/: position.ts
data/: provider.py  realtime.py  repository.py
engine/: risk.py  strategy.py
engine/adaptive/: __init__.py  (+5 more)
examples/: backtest_engine_core_demo.py  backtest_engine_demo.py  backtest_engine_demo_simple.py  signal_registry_demo.py  stock_position.yml  stock_swing.yml
framework/: data-contracts.md  overview.md
model/: model.json
planning/: architecture.md
schemas/: summary.schema.json
scripts/: build-desktop.cjs  preflight-check.ps1  preflight.ps1
signals/: registry.py  registry_patch.py  stock_patterns.py  technical_signals.py  vwap.py
src/: App.css  App.tsx  BootGate.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: keychain.rs  lib.rs  main.rs
src-tauri/src/engine/: broker.rs  calendar.rs  loop.rs  mtm.rs  risk.rs  types.rs
src-tauri/src/provider/: mod.rs  polygon.rs  yahoo.rs
src-tauri/src/providers/: polygon.rs
src-tauri/src/storage/: cache.rs
strategies/: bull_put_spread.py  iron_condor.py  pmcc_strategy.py  rsi_mean_reversion.py  stock_position.py  stock_swing.py  wheel_strategy.py
tests/: conftest.py  test_backtest_engine.py  test_backtest_engine_core.py  test_backtest_engine_simple.py  test_realtime.py  test_signal_registry.py  test_signal_registry_simple.py  test_sqlite_repository.py  test_technical_signals.py
(+126 files in other folders)
