[package]
name = "trading-engine"
version = "0.1.0"
description = "A Tauri-based trading engine application"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = ""
default-run = "trading-engine"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
csv = "1.3"


[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
